# bm42-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  utils.rs
